--- a/index.html
+++ b/index.html
@@ -98,15 +98,21 @@
                         <span class="code-dot red"></span>
                         <span class="code-dot yellow"></span>
                         <span class="code-dot green"></span>
-                        <span class="code-title">code.ts</span>
+                        <span class="code-title">terminal</span>
                     </div>
                     <div class="code-content">
-                        <pre><code><span class="code-keyword">const</span> <span class="code-variable">engineer</span> = {
-  <span class="code-property">name</span>: <span class="code-string">'Daniel Rivni'</span>,
-  <span class="code-property">role</span>: <span class="code-string">'Software Engineer'</span>,
-  <span class="code-property">passion</span>: <span class="code-string">'Building amazing things'</span>,
-  <span class="code-property">skills</span>: [<span class="code-string">'Full-Stack'</span>, <span class="code-string">'Cloud'</span>, <span class="code-string">'DevOps'</span>]
-};</code></pre>
+                        <pre><code><span class="code-prompt">$</span> <span class="code-command">whoami</span>
+<span class="code-output">daniel-rivni</span>
+
+<span class="code-prompt">$</span> <span class="code-command">cat about.txt</span>
+<span class="code-output">Software Engineer | Full-Stack Developer
+Passionate about clean code & innovative solutions
+Expertise: React, Node.js, Python, Cloud, DevOps</span>
+
+<span class="code-prompt">$</span> <span class="code-command">ls projects/</span>
+<span class="code-output">Coupix/  DroneAutoLanding/  Road-Buddiz/</span>
+
+<span class="code-prompt">$</span> <span class="code-cursor-blink">_</span></code></pre>
                     </div>
                 </div>
             </div>
