--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Expertise: React, Node.js, Python, Cloud, DevOps</span>
                                 </a>
                             </div>
                         </div>
-                        <img src="https://i.imagesup.co/images2/a2656220cc189f6e3b5081618be210077acb925e.png"
+                        <img src="https://i.imagesup.co/images2/0bd651a8cc70d43fab15747d858bc1809f7ac544.png"
                             alt="Coupix Project" class="project-image-img" />
                     </div>
                     <div class="project-content">
@@ -336,8 +336,18 @@ Expertise: React, Node.js, Python, Cloud, DevOps</span>
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">React</span>
-                            <span class="tech-tag">Node.js</span>
-                            <span class="tech-tag">MongoDB</span>
+                            <span class="tech-tag">TypeScript</span>
+                            <span class="tech-tag">Supabase</span>
+                        </div>
+                        <div class="project-card-links">
+                            <a href="https://coupix.lovable.app/login" target="_blank" rel="noopener noreferrer"
+                                class="project-card-link">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                            <a href="https://github.com/DanielRivni/Coupix" target="_blank" rel="noopener noreferrer"
+                                class="project-card-link">
+                                <i class="fab fa-github"></i> View Code
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -367,6 +377,12 @@ Expertise: React, Node.js, Python, Cloud, DevOps</span>
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">OpenCV</span>
                             <span class="tech-tag">ArUco</span>
+                        </div>
+                        <div class="project-card-links">
+                            <a href="https://github.com/DanielRivni/DroneAutoLanding" target="_blank"
+                                rel="noopener noreferrer" class="project-card-link">
+                                <i class="fab fa-github"></i> View Code
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -400,6 +416,16 @@ Expertise: React, Node.js, Python, Cloud, DevOps</span>
                             <span class="tech-tag">React Native</span>
                             <span class="tech-tag">Firebase</span>
                             <span class="tech-tag">Maps API</span>
+                        </div>
+                        <div class="project-card-links">
+                            <a href="https://road-buddiz.web.app/" target="_blank" rel="noopener noreferrer"
+                                class="project-card-link">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                            <a href="https://github.com/DanielRivni/Road-Buddiz" target="_blank"
+                                rel="noopener noreferrer" class="project-card-link">
+                                <i class="fab fa-github"></i> View Code
+                            </a>
                         </div>
                     </div>
                 </div>
